--- a/pom.xml
+++ b/pom.xml
@@ -50,19 +50,33 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!--QueryDSL支持-->
+        <!--QueryDSL支持 start-->
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
             <scope>provided</scope>
             <version>${querydsl.version}</version>
         </dependency>
-        <!--QueryDSL支持-->
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-jpa</artifactId>
             <version>${querydsl.version}</version>
         </dependency>
+        <!--QueryDSL支持 end-->
+        <!--保利威sign生成所需jar包 start-->
+        <dependency>
+            <groupId>org.apache.directory.studio</groupId>
+            <artifactId>org.apache.commons.codec</artifactId>
+            <version>1.8</version>
+        </dependency>
+        <!--保利威sign生成所需jar包 end-->
+        <!--feign start-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.2.3.RELEASE</version>
+        </dependency>
+        <!--feign end-->
     </dependencies>
 
     <build>
